# virtualvaultfs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Warnings.cmake
config/: example.toml
scripts/: build-debug.sh  build-release.sh  format.sh
src/: main.cpp
src/app/: App.cpp  App.hpp  Config.cpp  Config.hpp
src/db/: Database.cpp  Database.hpp  Statement.cpp  Statement.hpp  Transaction.cpp  Transaction.hpp
src/db/migrations/: 001_initial.sql  002_indexes.sql
src/fuse/: FuseMain.cpp  FuseMain.hpp  Operations.cpp  Operations.hpp
src/import/: Importer.cpp  Importer.hpp
src/storage/: BackendPaths.cpp  BackendPaths.hpp  ObjectStore.cpp  ObjectStore.hpp
src/util/: Error.cpp  Error.hpp  FsUtil.cpp  FsUtil.hpp  Logger.cpp  Logger.hpp
src/vfs/: FileHandle.cpp  FileHandle.hpp  Node.hpp  NodeStore.cpp  NodeStore.hpp  PathResolver.cpp  PathResolver.hpp
tests/: CMakeLists.txt  NodeStoreTests.cpp  ObjectStoreTests.cpp  PathResolverTests.cpp  Simulation.cpp
